<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de visita</string>
    <string name="new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso</string>
    <string name="label_share_to">Compartilhar</string>
</resources>